# anomaly_detection_emb

./: .gitignore  CMakeLists.txt  README.md  main.cpp
build_check/.qt/: QtDeploySupport.cmake
build_check/.qt/deploy_qml_imports/: appclient.cmake
build_check/client/: appclient
build_check/client/.qt_plugins/: Qt6_QmlPlugins_Imports_appclient.cmake  Qt6_QmlPlugins_Imports_appclient.rsp
build_check/client/.rcc/: appclient_raw_qml_0.qrc  qmake_client.qrc
build_check/client/.rcc/qmlcache/: appclient_Main_qml.cpp  appclient_qml_loader_file_list.rsp  appclient_qmlcache_loader.cpp
build_check/client/appclient_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_check/client/appclient_autogen/DKZCZIDWWL/: moc_dbusclient.cpp.d  moc_dbusclient.cpp.json
build_check/client/client/: qmldir
build_check/client/epr_qt_widgets_large_lib/: epr_qt_widgets_large_lib_qmltyperegistrations.cpp  qmldir
build_check/client/meta_types/: appclient_json_file_list.txt  appclient_json_file_list.txt.timestamp  qt6appclient_metatypes.json
build_check/client/qmltypes/: appclient_foreign_types.txt
build_check/server/: appserver  dbusinterfaceadaptor.cpp  dbusinterfaceadaptor.h  dbusinterfaceadaptor.moc  dbusinterfaceadaptor.moc_parameters
build_check/server/appserver_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
client/: CMakeLists.txt  CMakeLists.txt.TNOhzj  Main.qml  main.cpp
client/connection/: dbusclient.cpp  dbusclient.h
client/epr_qt_widgets_large_lib/: CMakeLists.txt  ScalingUtility.qml
client/epr_qt_widgets_large_lib/banners/: Banner.qml
client/epr_qt_widgets_large_lib/bars/: TitleBarLeft.qml  TopBarSingle.qml
client/epr_qt_widgets_large_lib/buttons/: ButtonCentralLarge.qml  IconButton.qml
client/epr_qt_widgets_large_lib/colors/: ColorSemantic.qml
client/epr_qt_widgets_large_lib/dialog/: LoginDialog.qml  ParameterDialog.qml  SliderDialog.qml
client/epr_qt_widgets_large_lib/fonts/: FontStyle.qml
client/epr_qt_widgets_large_lib/lists/: CheckBoxListItem.qml  DataMonitorListItem.qml  ManualTestListItem.qml  ParametersListItem.qml
client/epr_qt_widgets_large_lib/parts/: CustomRoundedRectangle.qml  ModalLoginInputContent.qml  ModalValueInputContent.qml  RadioButtonCustom.qml  SwitchButton.qml  TabbedNavigationItem.qml
client/epr_qt_widgets_large_lib/progressBars/: ProgressBarItem.qml
client/epr_qt_widgets_large_lib/sidebars/: SideNavigationHeader.qml  SideNavigationItem.qml  Sidebar.qml  SidebarBottom.qml
client/epr_qt_widgets_large_lib/snackbars/: Snackbar.qml
client/epr_qt_widgets_large_lib/spacing/: Spacing.qml
dbusinterfaces/: com.bikeDashboard.ParameterManager.xml  com.example.DBusInterface.xml
server/: CMakeLists.txt  main.cpp
server/connection/: dbusserver.cpp  dbusserver.h  dbusserver_interface.cpp  dbusserver_interface.h  dbusservice.cpp  dbusservice.h
server/dbus/: ParameterDBus.cpp  ParameterDBus.h  ParameterManagerDBus.cpp  ParameterManagerDBus.h  parameters_adaptor.cpp  parameters_adaptor.h
server/parameters/: LutParameters.h  Parameter.cpp  Parameter.h  ParameterLut.cpp  ParameterLut.h  ParameterManager.cpp  ParameterManager.h  ParameterType.h  ParameterValue.h
server/uart/: UART_PROTOCOL.md  uart_protocol.cpp  uart_protocol.h  uart_receiver.cpp  uart_receiver.h
(+115 files in other folders)
